Update v cart - coupon

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         "php": "^8.2",
         "aquadic/address-module": "@dev",
         "aquadic/admin-module": "@dev",
-        "aquadic/cart-module": "v2.x-dev",
+        "aquadic/cart-module": "v3.x-dev",
         "aquadic/category-module": "@dev",
         "aquadic/cloudwa-api": "@dev",
         "aquadic/common-traits": "@dev",
-        "aquadic/coupon-module": "@dev",
+        "aquadic/coupon-module": "v2.x-dev",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-settings-plugin": "^3.2",
         "aquadic/favorite-module": "@dev",
