--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,8 @@
         "ysfkaya/filament-phone-input": "^3.2"
     },
     "require-dev": {
+        "devaslanphp/auto-translate": "^1.0",
+        "laravel-lang/common": "^6.7",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
@@ -68,6 +70,14 @@
         }
     },
     "repositories": [
+        {
+            "type": "path",
+            "url": "../modules/*",
+            "options": {
+                "symlink": true
+            }
+
+        },
         {
             "type": "vcs",
             "url": "git@github.com:aquadic/order-module.git"
